--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
 	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 	crossorigin="anonymous"></script>
 
-
 	<title> Hangman Game </title>
 
 </head>
@@ -31,13 +30,19 @@
         <div id="wrongGuesses"></div>
         <div id="guessesLeft"></div>
         <div id="wins"></div>
-        <div id="loses"></div>
+		<div id="loses"></div>
+		
+		<div id="map"></div>
 
-    </div>
+	</div>
 
 	<!-- Links gamescript -->
 	<script type="text/javascript" src="assets/javascript/script.js">
-    </script>
+	</script>
+	
+	<!-- google maps -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAR2AwXMKhJLzQHjL02SzzSTEWoxZKZ8wg&callback=initMap"
+    async defer></script>
 
 </body>
 </html>
