--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
 
 	</div>
 
+	<!-- keys -->
+	<script type="text/javascript" src="assets/javascript/keys.js">
+	</script>
 	<!-- Links gamescript -->
 	<script type="text/javascript" src="assets/javascript/script.js">
 	</script>
